# hindsight

./: FINDINGS.md
.github/workflows/: test.yml
hindsight-agent-sdk/python/: pyproject.toml
hindsight-agent-sdk/python/hindsight_agent_sdk/: __init__.py  wiki.py
hindsight-agent-sdk/skill/: SKILL.md
hindsight-agent-sdk/typescript/: package-lock.json  package.json
hindsight-agent-sdk/typescript/src/: index.ts
hindsight-agent-setup/: package-lock.json  package.json
hindsight-agent-setup/src/: cli.ts
hindsight-agent/hindsight_agent/commands/: setup.py
hindsight-agent/plugin/hermes/: __init__.py
hindsight-api-slim/hindsight_api/: config.py  migrations_oracle.py
hindsight-api-slim/hindsight_api/admin/: cli.py
hindsight-api-slim/hindsight_api/api/: http.py
hindsight-api-slim/tests/: test_db_abstraction.py  test_hierarchical_config.py  test_mental_model_delta.py  test_oracle_http_integration.py  test_oracle_integration.py  test_worker.py
hindsight-clients/go/: api_operations.go
hindsight-docs/blog/: 2026-04-20-claude-code-persistent-memory.md  2026-04-21-hindsight-10k-stars.md
hindsight-docs/docs-integrations/: roo-code.md  smolagents.md
hindsight-docs/static/: openapi.json
hindsight-embed/hindsight_embed/: daemon_embed_manager.py
hindsight-integrations/openai-agents/: pyproject.toml
hindsight-integrations/roo-code/: README.md  install.py  settings.json
hindsight-integrations/superagent/: README.md
scripts/: release-integration.sh
skills/agent-memory/: SKILL.md
skills/hindsight-skill-builder/: SKILL.md
(+53 files in other folders)
