[project]
name = "hindsight-agent-sdk"
version = "0.1.0"
description = "Agent SDK for Hindsight Wiki — self-learning knowledge pages for AI agents"
requires-python = ">=3.10"
dependencies = [
    "hindsight-client>=0.4.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
